# cpp-server

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  PROTOCOL.md  README.md  build.bat  build.sh  docker-compose.yml  run.bat
build_msvc/: CMakeCache.txt  base.pb.cc  base.pb.h
build_test/: CMakeCache.txt
docs/: FPS 核心技术-延迟补偿与 Sub-tick 架构解析.md  client_integration.md  concurrency_model.md  damage_calculation.md  ecs_components.md  game_loop.md  matchmaking_flow.md  ops_guide.md  protocol_design.md  rpc_api.md  server_validation.md  storage_design.md  system_architecture.md  tech_stack.md  构建原理.md
proto/: base.proto
src/: config.h  dispatcher.h  kcp_session.cpp  kcp_session.h  main.cpp  session_manager.cpp  session_manager.h  udp_server.cpp  udp_server.h  utils.h
src/client/: console_client.cpp
src/core/: config.h  msg_ids.h  win_socket_init.h
src/engine/: snapshot_broadcaster.cpp  snapshot_broadcaster.h
src/handlers/: ping_handler.cpp  ping_handler.h
src/network/: dispatcher.h  kcp_session.cpp  kcp_session.h  session_manager.cpp  session_manager.h  udp_server.cpp  udp_server.h
src/server/: game_server.cpp  game_server.h
